site/modules/docker/static/css/main.css
.page-title-btn .control-panel {
    display: inline-block;
    padding: 8px 10px 0;
}
.date-error {
    margin-top: -2px;
    border: 2px solid red;
    border-radius: 5px;
}
.error {
    margin-left: 20px;
}
.manta-disclaimer-dashboard {
    padding-top: 10px;
}
.manta-disclaimer,
.dockers-wrapper {
    padding-bottom: 25px;
}
.docker-wrapper {
    position: relative;
    float: left;
    margin: 0 10px 10px 0;
    width: 240px;
    height: 215px;
    border-radius: 3px;
    background-color: #eef0f2;
}
.docker-wrapper .name {
    overflow: hidden;
    box-sizing: content-box;
    padding: 10px 15px 2px 15px;
    height: 35px;
    font-weight: bold;
    font-size: 16px;
}
.docker-wrapper .name p {
    color: #428bca;
    overflow: hidden;
    height: 23px;
    width: 160px;
    vertical-align: top;
    text-overflow: ellipsis;
    word-wrap: break-word;
}
.docker-wrapper .name p:hover {
    color: #2a6496;
    text-decoration: underline;
}
.docker-wrapper .name .label {
    font-size: 12px;
    font-weight: 700;
    line-height: 1;
    position: relative;
    top: -2px;
    display: inline-block;
    padding: 0 .6em .3em;
    cursor: pointer;
    text-align: center;
    vertical-align: baseline;
    white-space: nowrap;
    color: #020001;
    border: none;
    border-radius: .25em;
    outline: none;
    background-color: #f7f8f9;
    text-shadow: none;
}
.docker-wrapper .info {
    overflow: hidden;
    padding: 0 15px;
    width: 190px;
    font-size: 14px;
}
.btn-wrapper {
    float: left;
    margin: 20px 0 0 15px;
}
.left-part
{
    min-width: 600px;
    max-width: 600px;
    width: 100%;
}
.panel-heading
{
    border-bottom: 0;
    background: #f5f5f5;
}
.panel-heading .accordion-toggle
{
    position: relative;
    display: block;
    padding: 8px 15px;
    cursor: pointer;
}
.panel-heading a
{
    color: black;
    text-decoration: none;
    font-weight: 500;
    font-size: 16px;
}
.details-btn-block
{
    overflow: hidden;
    box-sizing: content-box;
    padding: 18px 10px;
    min-width: 465px;
    max-width: 465px;
    background-color: #fef1d2;
}
.details-btn-block .status.label
{
    box-sizing: content-box;
    margin-top: 0;
    line-height: 12px;
}
.details-btn-block .status.label .glyphicon-ok
{
    width: 14px;
    height: 14px;
}
.details-btn-block .status.label .glyphicon-ok:before
{
    position: absolute;
    left: -9px;
    font-size: 13px;
}
.details-btn-block p
{
    display: inline-block;
    height: 8px !important;
    vertical-align: top;
}

.details-btn-block button
{
    max-width: 110px;
}
.right-part .panel-default
{
    margin-top: 7px;
}
#collapse_summary .panel-body table td
{
    color: #7d7d7d;
    font-size: 14px;
    line-height: 28px;
}
.panel-body #insTable td {
    line-height: 16px;
}
#collapse_summary .panel-body table td:first-child
{
    color: #5d80a7;
}
#collapse_1 .panel-body table td + td
{
    overflow: hidden;
    max-width: 325px;
    font-weight: 300;
    font-size: 16px;
}
.panel-body-log
{
    padding: 15px 0;
}
.container-log
{
    overflow: auto;
    padding: 0 5px;
    max-height: 1018px;
    border: 1px solid #ccc;
    white-space: nowrap;
}
.container-log p
{
    margin-bottom: 0;
}
.right-part .panel
{
    box-shadow: none;
}
.delete-icon,
.reboot-icon,
.icon-play,
.stop-icon,
.pause-icon
{
    position: relative;
    left: -4px;
    float: left;
    box-sizing: content-box;
    margin-top: 3px;
    padding-right: 5px;
    width: 14px;
    height: 14px;
    background-repeat: no-repeat;
    vertical-align: top;
    line-height: 14px;
}
.delete-icon
{
    margin-top: 1px;
    height: 18px;
    background-image: url('../img/btn_i_delete.png');
}
.reboot-icon
{
    background-image: url('../img/btn_i_reboot.png');
}
.pause-icon
{
    background-image: url('../img/btn_i_pause.png');
}
.stop-icon
{
    padding-right: 10px;
    background-image: url('../img/btn_i_stop.png');
}
.icon-play
{
    background-image: url(../../../../static/img/glyphicons-halflings-white.png) !important;
    background-position: -264px -72px;
}
.id-section td:first-child
{
    width: 140px;
}
.font_size
{
    text-align: left;
    font-size: 16px;
}
.status.label:not(.label-machine-details)
{
    margin-top: 0;
    width: 110px;
    height: 22px;
    text-transform: none;
}
.warn_icon
{
    float: left;
    width: 14px;
    height: 14px;
    background: url('../img/warn_icon.png') no-repeat;
    vertical-align: middle;
}
.label-info
{
    min-width: 94px;
    background-color: #999;
}
.label
{
    padding: 10px 14px;
    outline: none;
    border: none;
    border-radius: 0;
    background-image: none;
    box-shadow: none;
    text-shadow: none;
    font-size: 16px;
    cursor: default;
}
.btn-success
{
    font-size: 16px;
    display: inline-block;
    min-width: 94px;
    cursor: pointer;
    vertical-align: middle;
    color: black;
    border: none;
    -webkit-border-radius: 0 !important;
    -moz-border-radius: 0 !important;
    border-radius: 0 !important;
    outline: none;
    background-color: #afd46c;
    background-image: none;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
    text-shadow: none;
}
span.btn-success
{
    cursor: default;
}
.btn-machine-ctrl
{
    margin-left: 5px;
}
.docker-select-btn {
    padding: 3px 10px;
    border: 1px solid #ccc;
    border-radius: 3px !important;
    background-color: #eee;
    text-transform: none;
}
.grid-mini-btn {
    padding: 0 10px;
    height: 20px;
    font-size: 12px;
}
.grid-mini-btn.view {
    margin-right: 10px;
    background-color: #ccc;
}
.grid-mini-btn.download {
    background-color: #E0E0E0;
}
.form-group span.edit-label {
    display: inline-block;
    margin-right: 10px;
    width: 150px;
    text-align: right;
}
.form-group .edit-lxc-conf {
    vertical-align: top;
}
.form-group .edit-value textarea {
    min-width: 457px;
    max-width: 457px;
}
.digit-input {
    width: 255px;
}
/* ... */

